force-app/main/default/objects/vlocity_ps__MessageQueue__c/vlocity_ps__MessageQueue__c.object-meta.xml
<CustomObject>
    <label>Message Queue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>