force-app/main/default/objects/vlocity_ps__MessageQueue__c/fields/vlocity_ps__CommunityId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CommunityId__c</fullName>
    <label>Community Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>