force-app/main/default/objects/vlocity_ps__MessageQueue__c/fields/vlocity_ps__MessageText__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MessageText__c</fullName>
    <label>Message Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>