force-app/main/default/objects/vlocity_ps__MessageQueue__c/fields/vlocity_ps__SourceObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SourceObjectId__c</fullName>
    <label>Source Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>