force-app/main/default/objects/vlocity_ps__MessageQueue__c/fields/vlocity_ps__UserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UserId__c</fullName>
    <label>UserId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>